--- a/css/style.css
+++ b/css/style.css
@@ -1,49 +1,6 @@
 @charset "UTF-8";
 
 * {
-    font-family: Arial, Helvetica, sans-serif
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-div.d {
-    background-color: lightgray;
-    text-align: center;
-    height: 100px;
-    width: 100px;
-    border: 1px solid black;
-    display: inline-block;
-}
-
-div.d:hover {
-    background-color: yellow;
-}
-
-div#d4:hover {
-    color: red;
-}
-
-div#d4 > p {
-    display: none;
-}
-
-div#d4:hover > p {
-    display: block;
-    background-color: lightgray;
-}
-
-a {
-    color: rgb(14, 201, 14);
-    text-decoration: none;
-}
-
-a:visited {
-    color: rgb(218, 186, 7);
-}
-
-a:hover {
-    text-decoration: underline;
-    color: rgb(0, 140, 255);
-}
-
-img:hover {
-    transform: scale(1.3);
-}
